# duilib2

./: .gitignore  CMakeLists.txt  README.md  build.bat  run_cmake.bat
CMake/: duilib2-config.cmake
doc/: Attributes.xml
duidemo/: CMakeLists.txt  CefTestWnd.cpp  CefTestWnd.h  ControlEx.cpp  ControlEx.h  DlgFake.cpp  DuiDemo.cpp  MainWnd.cpp  MainWnd.h  MsgWnd.cpp  MsgWnd.h  PopWnd.cpp  PopupWnd.cpp  PopupWnd.h  SkinFrame.h  SkinManager.h  SplashWnd.cpp  StdAfx.h  TranparentCefWnd.cpp  TranparentCefWnd.h  TranparentWnd.cpp  TranparentWnd.h  duidemo.aps  resource.h
duilib_nuget/: duilib_1.0.0.1.nuspec
libcef_wrapper_2623/: CMakeLists.txt
src/: CMakeLists.txt  DuiLib.sln  StdAfx.h  UILibInternal.h  UIlib.cpp  UIlib.h
src/Control/: UIActiveX.cpp  UIActiveX.h  UIAnimation.cpp  UIAnimation.h  UIButton.cpp  UIButton.h  UICef.cpp  UICef.h  UIColorPalette.cpp  UIComboBox.cpp  UIComboBox.h  UIDateTime.cpp  UIEdit.cpp  UIEdit.h  UIFadeButton.cpp  UIFadeButton.h  UIFlash.cpp  UIFlash.h  UIGifAnim.cpp  UIGifAnim.h  UIGroupBox.cpp  UIGroupBox.h  UIHotKey.cpp  UIIPAddressEx.cpp  UIIPAddressEx.h  UILabel.cpp  UILabel.h  UIList.cpp  UIList.h  UIMenu.cpp  UIMenu.h  UIOption.cpp  UIOption.h  UIPlaceHolder.cpp  UIPlaceHolder.h  UIProgress.cpp  UIProgress.h  UIRichEdit.cpp  UIRing.cpp  UIRing.h  (+13 more)
src/Core/: ControlFactory.cpp  ControlFactory.h  UIBase.cpp  UIBase.h  UIContainer.cpp  UIControl.cpp  UIControl.h  UIDefine.h  UIDlgBuilder.cpp  UIManager.cpp  UIManager.h  UIMarkup.cpp  UIRender.cpp  UIRender.h  UIResourceManager.cpp  UIResourceManager.h
src/Demos/duidemo/: ControlEx.cpp  ControlEx.h  DuiDemo.cpp  MainWnd.cpp  MainWnd.h  MsgWnd.cpp  MsgWnd.h  PopWnd.cpp  PopWnd.h  SkinFrame.h  SkinManager.h  SplashWnd.cpp  SplashWnd.h  StdAfx.h  duidemo.vcxproj  duidemo.vcxproj.filters  packages.config  resource.h
src/Demos/skin/duidemo/: listitem.xml  main.xml  menu.xml  msg.xml  splash.xml  tileitem.xml
src/Doc/: Attributes.xml
src/DuiLib/: DuiLib.vcxproj  DuiLib.vcxproj.filters  StdAfx.h  UIlib.h  UIlibExport.h  packages.config
src/DuiLib/Control/: UIActiveX.cpp  UIActiveX.h  UIAnimation.h  UIButton.cpp  UIButton.h  UICef.cpp  UICef.h  UIColorPalette.cpp  UIColorPalette.h  UIComboBox.cpp  UIComboBox.h  UIDateTime.cpp  UIEdit.cpp  UIEdit.h  UIFadeButton.cpp  UIFadeButton.h  UIFlash.cpp  UIGifAnim.cpp  UIGifAnim.h  UIGroupBox.cpp  UIHotKey.cpp  UIHotKey.h  UIIPAddressEx.cpp  UIIPAddressEx.h  UILabel.cpp  UIList.cpp  UIList.h  UIMenu.cpp  UIMenu.h  UIOption.cpp  UIOption.h  UIPlaceHolder.h  UIProgress.cpp  UIProgress.h  UIRichEdit.cpp  UIRichEdit.h  UIRollText.cpp  UIScrollBar.cpp  UIScrollBar.h  UISlider.cpp  (+9 more)
src/DuiLib/Core/: ControlFactory.cpp  ControlFactory.h  UIBase.cpp  UIBase.h  UIContainer.cpp  UIContainer.h  UIControl.cpp  UIControl.h  UIDefine.h  UIDlgBuilder.cpp  UIManager.cpp  UIManager.h  UIMarkup.cpp  UIRender.cpp  UIRender.h  UIResourceManager.cpp  UIResourceManager.h
src/DuiLib/Internal/: unzip.cpp
src/DuiLib/Layout/: UIAnimationTabLayout.cpp  UIChildLayout.cpp  UIChildLayout.h  UIHorizontalLayout.cpp  UITabLayout.cpp  UIVerticalLayout.cpp
src/DuiLib/Render/: IRender.cpp  IRender.h
src/DuiLib/Utils/: Color.h  DPI.cpp  DPI.h  Task.cpp  Task.h  TrayIcon.cpp  TrayIcon.h  UIDelegate.cpp  UIShadow.cpp  UIShadow.h  Utils.cpp  Utils.h  WinImplBase.cpp  WinImplBase.h
src/Internal/: IEDownloadMgr.h  unzip.cpp  unzip.h
src/Internal/Cef/: CefApp.cpp  CefApp.h  CefDevTools.cpp  CefDevTools.h  CefGloablContext.h  CefGlobalContext.cpp  CefHandler.cpp  CefHandler.h  CefUtil.cpp  CefUtil.h  OsrImeHandler.cpp  OsrImeHandler.h  RequestContextHandler.cpp  RequestContextHandler.h
src/Layout/: UIAnimationTabLayout.h  UIChildLayout.cpp  UIChildLayout.h  UIHorizontalLayout.h  UITabLayout.h  UITileLayout.cpp  UITileLayout.h  UIVerticalLayout.cpp  UIVerticalLayout.h
src/Render/: IRender.h
src/Utils/: Color.cpp  Color.h  DPI.cpp  DPI.h  DragDropImpl.cpp  DragDropImpl.h  SystemTrayIcon.cpp  SystemTrayIcon.h  Task.cpp  Task.h  TrayIcon.cpp  UIDelegate.h  UIShadow.cpp  UIShadow.h  Utils.cpp  Utils.h  VersionHelpers.h  WinImplBase.cpp  WinImplBase.h
test-resource/: test.html
